# cuda-oxide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
crates/cargo-oxide/: Cargo.toml
crates/cargo-oxide/src/: commands.rs
crates/cuda-async/: Cargo.toml  README.md
crates/cuda-async/src/: device_context.rs  launch.rs
crates/cuda-core/: Cargo.toml
crates/cuda-core/src/: device_buffer.rs  embedded.rs  lib.rs
crates/cuda-core/tests/: device_buffer.rs  device_copy_impls.rs  pinned_host_buffer.rs
crates/cuda-device/: Cargo.toml  README.md
crates/cuda-device/src/: async_copy.rs  bf16x2.rs  dotprod.rs  grid.rs  lib.rs  shared.rs  warp.rs
crates/cuda-host/: Cargo.toml  README.md
crates/cuda-host/src/: embedded.rs  launch.rs  lib.rs  ltoir.rs
crates/cuda-host/tests/: cuda_module_api.rs
crates/cuda-macros/: Cargo.toml  README.md
crates/cuda-macros/src/: lib.rs
crates/cuda-macros/tests/: macro_guard.rs
crates/cuda-macros/tests/compile_fail/: launch_requires_unsafe.rs  launch_requires_unsafe.stderr
crates/dialect-mir/: Cargo.toml  README.md
crates/dialect-mir/src/: rust_intrinsics.rs  types.rs
crates/dialect-mir/src/ops/: aggregate.rs  comparison.rs  debug.rs
crates/dialect-mir/tests/: ops_test.rs
crates/dialect-nvvm/: Cargo.toml
crates/dialect-nvvm/src/ops/: bf16x2.rs  cp_async.rs  dotprod.rs  mod.rs  warp.rs
crates/dialect-nvvm/tests/: ops_test.rs
crates/fuzzer/: Cargo.toml
crates/libnvvm-sys/: Cargo.toml
crates/llvm-export/: Cargo.toml
crates/llvm-export/src/: lib.rs
crates/llvm-export/src/export/: config.rs  debug.rs  function.rs  literals.rs  module.rs  ops.rs  state.rs
crates/llvm-export/tests/: export_test.rs
crates/mir-importer/: Cargo.toml
crates/mir-importer/src/: lib.rs  llvm_tools.rs  pipeline.rs
crates/mir-importer/src/translator/: body.rs  layout.rs  mod.rs  rvalue.rs  statement.rs  types.rs
crates/mir-importer/src/translator/terminator/: drop_glue.rs  mod.rs
crates/mir-lower/: Cargo.toml  README.md
crates/mir-lower/src/: lowering.rs
crates/mir-lower/src/convert/: interface_impls.rs  type_interface_impls.rs  types.rs
crates/mir-lower/src/convert/intrinsics/: bf16x2.rs  common.rs  convert.rs  cp_async.rs  dotprod.rs  mod.rs  warp.rs
crates/mir-lower/src/convert/ops/: aggregate.rs  arithmetic.rs  call.rs  cast.rs  constants.rs  memory.rs
crates/mir-lower/tests/: lowering_test.rs
crates/oxide-artifacts/: Cargo.toml
crates/oxide-artifacts/src/: lib.rs
crates/reserved-oxide-symbols/: Cargo.toml
crates/reserved-oxide-symbols/src/: lib.rs
crates/rustc-codegen-cuda/: Cargo.toml  README.md  STATUS.md
crates/rustc-codegen-cuda/examples/addressof_sharedarray/: Cargo.toml
crates/rustc-codegen-cuda/examples/addressof_sharedarray/src/: main.rs
crates/rustc-codegen-cuda/examples/array_for_loop/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_for_loop/src/: main.rs
crates/rustc-codegen-cuda/examples/array_init/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_init/src/: main.rs
crates/rustc-codegen-cuda/examples/bf16x2_fma/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/bf16x2_fma/src/: main.rs
crates/rustc-codegen-cuda/examples/bool_phi_cmp/src/: main.rs
crates/rustc-codegen-cuda/examples/carrying_mul_add/: Cargo.toml
crates/rustc-codegen-cuda/examples/carrying_mul_add/src/: main.rs
crates/rustc-codegen-cuda/examples/cbrt_smoke/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cbrt_smoke/src/: main.rs
crates/rustc-codegen-cuda/examples/cluster/src/: main.rs
crates/rustc-codegen-cuda/examples/complex_mul/: README.md
crates/rustc-codegen-cuda/examples/const_aggregate/: Cargo.toml
crates/rustc-codegen-cuda/examples/const_aggregate/src/: main.rs
crates/rustc-codegen-cuda/examples/constant_memory_coeffs/: Cargo.toml
crates/rustc-codegen-cuda/examples/constant_memory_coeffs/src/: main.rs
crates/rustc-codegen-cuda/examples/constant_memory_simple/src/: main.rs
crates/rustc-codegen-cuda/examples/coop_groups_demo/: README.md
crates/rustc-codegen-cuda/examples/coop_groups_demo/src/: main.rs
crates/rustc-codegen-cuda/examples/cp_async_zfill/: Cargo.toml
crates/rustc-codegen-cuda/examples/cp_async_zfill/src/: main.rs
crates/rustc-codegen-cuda/examples/cuda_module_in_lib/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cuda_module_in_lib/kernel-lib/: Cargo.toml
crates/rustc-codegen-cuda/examples/enum_abi_multi_payload/: Cargo.toml
crates/rustc-codegen-cuda/examples/enum_array_match/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_heap_alloc/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_missing_device_attr/: Cargo.toml
crates/rustc-codegen-cuda/examples/fcmp_ne_nan_smoke/: Cargo.toml
crates/rustc-codegen-cuda/examples/fn_ptr_naming/: Cargo.toml
crates/rustc-codegen-cuda/examples/fp_special_literal_smoke/: Cargo.toml
crates/rustc-codegen-cuda/examples/gemm_sol/: README.md
crates/rustc-codegen-cuda/examples/manual_launch_generic/: README.md
crates/rustc-codegen-cuda/examples/manual_launch_libdevice/: README.md
crates/rustc-codegen-cuda/examples/ne_bytes_transmute/: Cargo.toml
crates/rustc-codegen-cuda/examples/option_ref_unwrap_or/: Cargo.toml
crates/rustc-codegen-cuda/examples/ord_cmp/: Cargo.toml
crates/rustc-codegen-cuda/examples/redux_minmax/: Cargo.toml
crates/rustc-codegen-cuda/examples/redux_sum/: Cargo.toml
crates/rustc-codegen-cuda/examples/ref_index_projections/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/ref_operand_mul/: Cargo.toml  LICENSE  README.md
crates/rustc-codegen-cuda/examples/repr_u32_enum_stride/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/slice_get_mut/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/slice_reslice/: Cargo.toml
crates/rustc-codegen-cuda/examples/struct_field_layout/: Cargo.toml
crates/rustc-codegen-cuda/examples/toolchain_pairing_smoke/: Cargo.toml
crates/rustc-codegen-cuda/examples/transmute_scalar_struct/: Cargo.toml
crates/rustc-codegen-cuda/src/: collector.rs  lib.rs
(+80 files in other folders)
