[workspace]
resolver = "3"
members = [
    # Core crates
    "crates/cuda-device",
    "crates/cuda-host",
    "crates/cuda-macros",
    "crates/llvm-export",
    "crates/dialect-mir",
    "crates/dialect-nvvm",
    "crates/mir-importer",
    "crates/mir-lower",
    "crates/cargo-oxide",
    "crates/oxide-artifacts",
    # FFI bindings
    "crates/cuda-bindings",
    "crates/cuda-core",
    "crates/cuda-async",
    "crates/libnvvm-sys",
    "crates/nvjitlink-sys",
    # Internal naming contract (workspace-private; publish = false)
    "crates/reserved-oxide-symbols",
    # Differential codegen fuzzer support
    "crates/fuzzer",
]

[workspace.package]
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"
repository = "https://github.com/NVlabs/cuda-oxide.git"

# Note: crates/rustc-codegen-cuda is NOT a workspace member because it requires
# special rustc nightly features and a different build process.
# Build and run examples with: cargo oxide run <example>
# Examples are in: crates/rustc-codegen-cuda/examples/

[workspace.dependencies]
# Pliron MLIR framework, pinned to upstream master. The additions cuda-oxide
# needs (address spaces, atomics, inline asm, FP16, stronger verification) landed
# upstream in pliron via #94 (which absorbed #116), so we track master directly.
# pliron-llvm uses default-features = false to keep llvm-sys (LLVM 22) out:
# cuda-oxide consumes the dialect modeling only, not the FFI bridge.
# `crates/rustc-codegen-cuda/Cargo.toml` MUST stay on this same rev, or pliron
# resolves to two distinct crates and types stop unifying.
pliron = { git = "https://github.com/pliron-org/pliron", rev = "af1b7d07dda91dad140c1df1df665754cd1646e5" }
pliron-derive = { git = "https://github.com/pliron-org/pliron", rev = "af1b7d07dda91dad140c1df1df665754cd1646e5" }
pliron-llvm = { git = "https://github.com/pliron-org/pliron", rev = "af1b7d07dda91dad140c1df1df665754cd1646e5", default-features = false }

# Internal crates
llvm-export = { path = "crates/llvm-export" }
dialect-mir = { path = "crates/dialect-mir" }
dialect-nvvm = { path = "crates/dialect-nvvm" }
mir-lower = { path = "crates/mir-lower" }
mir-importer = { path = "crates/mir-importer" }
cuda-device = { path = "crates/cuda-device" }
cuda-host = { path = "crates/cuda-host" }
cuda-macros = { path = "crates/cuda-macros" }
cuda-bindings = { path = "crates/cuda-bindings" }
cuda-core = { path = "crates/cuda-core" }
cuda-async = { path = "crates/cuda-async" }
libnvvm-sys = { path = "crates/libnvvm-sys" }
nvjitlink-sys = { path = "crates/nvjitlink-sys" }
reserved-oxide-symbols = { path = "crates/reserved-oxide-symbols" }
fuzzer = { path = "crates/fuzzer" }
oxide-artifacts = { path = "crates/oxide-artifacts" }

# Common dependencies
futures = "0.3"
thiserror = "2"
linkme = "0.3"
anyhow = "1.0"
once_cell = "1.18"
combine = "4.6"
log = "0.4"
half = "2.7"
libloading = "0.8"

# llvm-export deps
rustc-hash = "2.0"
bitflags = "2.0"
dyn-clone = "1.0"

# cuda-macros deps
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
