[package]
name = "cargo-oxide"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cargo subcommand for cuda-oxide: build and run Rust GPU programs"

[[bin]]
name = "cargo-oxide"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libnvvm-sys = { workspace = true }
nvjitlink-sys = { workspace = true }
cuda-host = { workspace = true }
cuda-core = { workspace = true }
toml = "1"
