[package]
name = "cuda-core"
version = "0.2.1"
edition.workspace = true
description = "Safe RAII wrappers around the CUDA driver API (idiomatic host-side CUDA)"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cuda-bindings = { path = "../cuda-bindings" }
anyhow = { workspace = true }
half = { workspace = true }
oxide-artifacts = { workspace = true, features = ["object-read"] }

[dev-dependencies]
oxide-artifacts = { workspace = true, features = ["object-write"] }
