[package]
name = "cuda-device"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Device-side intrinsics and types for CUDA kernels in Rust"

[dependencies]
cuda-macros = { workspace = true }

[dev-dependencies]
trybuild = "1"
