[package]
name = "cuda-macros"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for CUDA kernel development (#[kernel], #[device], etc.)"

[lib]
proc-macro = true

[features]
default = []
async = []

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
reserved-oxide-symbols = { workspace = true }

[dev-dependencies]
trybuild = "1"
# Dev-only cycle (cargo allows it): the launch_requires_unsafe compile-fail
# test type-checks a real cuda_launch! expansion, which needs the host-side
# launch types.
cuda-host = { workspace = true }
cuda-core = { workspace = true }
