[package]
name = "dialect-mir"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MIR dialect for Pliron IR framework (Rust MIR representation)"

[dependencies]
pliron = { workspace = true }
pliron-derive = { workspace = true }
thiserror = { workspace = true }
linkme = { workspace = true }
combine = { workspace = true }
once_cell = { workspace = true }
