[package]
name = "dialect-nvvm"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NVVM dialect for Pliron IR framework (NVIDIA GPU intrinsics)"

[dependencies]
pliron = { workspace = true }
pliron-derive = { workspace = true }
thiserror = { workspace = true }
linkme = { workspace = true }
combine = { workspace = true }
dyn-clone = { workspace = true }