[package]
name = "libnvvm-sys"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime (dlopen) bindings to NVIDIA libNVVM (ships with the CUDA Toolkit)"

[dependencies]
libloading = { workspace = true }
thiserror = { workspace = true }
