[package]
name = "llvm-export"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Re-exports pliron-llvm and emits the LLVM dialect as textual LLVM IR"

[dependencies]
pliron = { workspace = true }
pliron-derive = { workspace = true }
pliron-llvm = { workspace = true }
thiserror = { workspace = true }
linkme = { workspace = true }
rustc-hash = { workspace = true }
bitflags = { workspace = true }
combine = { workspace = true }
log = { workspace = true }
dyn-clone = { workspace = true }
reserved-oxide-symbols = { workspace = true }

[dev-dependencies]
expect-test = "1.4"
