[package]
name = "mir-importer"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust MIR to Pliron IR translation and compilation pipeline"

[dependencies]
pliron = { workspace = true }
pliron-derive = { workspace = true }
llvm-export = { workspace = true }
dialect-mir = { workspace = true }
dialect-nvvm = { workspace = true }
mir-lower = { workspace = true }
thiserror = { workspace = true }
linkme = { workspace = true }
once_cell = { workspace = true }
combine = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
