[package]
name = "mir-lower"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dialect-mir to LLVM dialect lowering pass"

[dependencies]
pliron = { workspace = true }
llvm-export = { workspace = true }
pliron-derive = { workspace = true }
thiserror = { workspace = true }
dialect-mir = { workspace = true }
dialect-nvvm = { workspace = true }
anyhow = { workspace = true }
reserved-oxide-symbols = { workspace = true }

[dev-dependencies]
# Only used by unit tests to build a `combine` SourcePosition for synthetic
# pliron source locations; not needed by the crate's non-test code.
combine = { workspace = true }
