[package]
name = "reserved-oxide-symbols"
version = "0.2.1"
description = "INTERNAL: cuda-oxide workspace symbol-name contract. Not a public API."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints.rust]
missing_docs = { level = "deny" }
