[package]
name = "array_for_loop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Regression example for issue #138.
#
# `for x in arr` over a by-value array `[T; N]` produces a MIR `Drop`
# terminator for the `core::array::IntoIter<T, N>` iterator, because
# `IntoIter` has an `impl Drop`. For element types without drop glue
# (such as `u32` or a plain Copy struct) that destructor is a no-op, so
# the importer lowers the Drop terminator to a plain branch.
#
# Before the fix this failed with
#   "Unsupported construct: drop of `...IntoIter...` is not supported on
#    the device; cuda-oxide does not yet emit device-side `drop_in_place`
#    calls."
# Run with:
#   cargo oxide run array_for_loop

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
