[package]
name = "carrying_mul_add"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Standalone crate, not part of the parent workspace.
[workspace]

# Regression for issue #137: `u32::carrying_mul_add` (and the sibling
# bigint helpers `carrying_mul` / signed `carrying_mul_add`) lower to the
# rustc intrinsic `core::intrinsics::carrying_mul_add` in MIR. The importer
# had no dispatch arm for it, so the call fell through to a regular
# `mir.call` against a symbol the collector never defines, and the build
# died late with "Symbol _RINvNtC..carrying_mul_add.. not found".
#
# Build and run with:
#   cargo oxide run carrying_mul_add

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
