[package]
name = "const_aggregate"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression for nested-aggregate constant materialization.
# Build/run with:
#   cargo oxide run const_aggregate
#
# Before the fix, a const struct whose field is itself a struct (or an
# array of structs) failed to compile with
#   "Struct constant field N has unsupported type".

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
