[package]
name = "cuda_module_in_lib"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# This is a standalone workspace to allow the nested kernel-lib crate
[workspace]
members = ["kernel-lib"]

[dependencies]
# The kernel library - holds a #[cuda_module] with concrete kernels
module-kernels = { path = "kernel-lib" }

cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
