# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "enum_abi_multi_payload"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# End-to-end proof that multi-payload enum layout is field-faithful across
# the host/device ABI: the host writes a `#[repr(u32)]` enum buffer with
# rustc's layout, a kernel matches and decodes it, and a second kernel
# constructs enums back into host-visible memory. Such enums used to be
# rejected at the kernel ABI boundary ("not yet field-faithful").
#
# Build and run with:
#   cargo oxide run enum_abi_multi_payload

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
