# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "enum_array_match"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression for issue #131: `match xs[i]` over an array of enums failed to
# import with "Downcast on non-ADT type: Array". Exercises runtime-index,
# constant-index, and deref-then-index projection chains ending in
# Downcast + Field.
#
# Build and run with:
#   cargo oxide run enum_array_match

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
