[package]
name = "fcmp_ne_nan_smoke"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates unified compilation with rustc-codegen-cuda.
# Build with:
#   cargo oxide run fcmp_ne_nan_smoke
# Or manually:
#   RUSTFLAGS="-Z codegen-backend=path/to/librustc_codegen_cuda.so" cargo build --release

[dependencies]
# Device-side intrinsics (thread indexing, barriers, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
