# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fn_ptr_naming"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression for issue #130: a kernel failed to import just by NAMING a
# fn-pointer type (coercing a fn item and comparing it reflexively, no
# indirect call). Exercises the FnDef and FnPtr type-translation arms.
#
# Build and run with:
#   cargo oxide run fn_ptr_naming

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
