[package]
name = "ne_bytes_transmute"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression test for issue #125: `u32::from_ne_bytes` and friends are
# MIR Transmutes between `[u8; N]` and a scalar. They must lower through
# a stack-slot round-trip, never an LLVM aggregate bitcast.
# Build with:
#   cargo oxide run ne_bytes_transmute

[dependencies]
# Device-side intrinsics (thread indexing, barriers, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
