[package]
name = "option_ref_unwrap_or"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Regression example for issue #132: `Option<&T>::unwrap_or(&literal)`.
#
# Under -O, MIR const-folds the `None` arm into a reference-to-scalar
# constant (pointer placeholder bytes + a provenance entry naming the
# literal's allocation). The importer used to follow that provenance only
# for struct pointees; scalar pointees fell through to the raw-pointer path
# and lowered to `inttoptr 0` -> `load i32, ptr null` -> CUDA error 700.
#
# Run with:
#   cargo oxide run option_ref_unwrap_or

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
