[package]
name = "ord_cmp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Regression test for issue #136: MIR `BinaryOp::Cmp` from `Ord::cmp`.
# Build with:
#   cargo oxide run ord_cmp

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
